fixed spacing in banner - removed padding for mobile

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -23,12 +23,12 @@
   margin-right: auto;
   text-align: center;
   width: 100%;
-  padding: 1em;
+  padding: 0;
 }
 
 .bluflame-banner {
   background-image: url("/assets/images/banner.png");
-  height: 5em;
+  height: 6em;
   border-bottom: 1px solid #cccccc;
 }
 
